// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayDropDownWithDrilldown renders 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-1"
        aria-expanded="true"
        aria-haspopup="menu"
        class="dropdown-toggle"
        data-testid="trigger"
        style=""
      />
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu drilldown dropdown-menu-indicator-end show"
        id="clay-dropdown-menu-1"
        role="presentation"
        style="left: -999px; top: -995px;"
      >
        <div
          class="drilldown-inner"
        >
          <div
            aria-hidden="true"
            class="drilldown-item drilldown-current"
          >
            <ul
              class="inline-scroller"
              role="menu"
            >
              <li
                role="none"
              >
                <a
                  class="dropdown-item"
                  data-testid="menu-item-Hash Link"
                  href="#"
                  role="menuitem"
                >
                  <span
                    class="dropdown-item-indicator-text-end"
                  >
                    Hash Link
                  </span>
                </a>
              </li>
              <li
                role="none"
              >
                <button
                  class="dropdown-item btn btn-unstyled"
                  data-testid="menu-item-Alert!"
                  role="menuitem"
                  type="button"
                >
                  <span
                    class="dropdown-item-indicator-text-end"
                  >
                    Alert!
                  </span>
                </button>
              </li>
              <li
                role="none"
              >
                <button
                  class="dropdown-item btn btn-unstyled"
                  data-testid="menu-item-Subnav"
                  role="menuitem"
                  type="button"
                >
                  <span
                    class="dropdown-item-indicator-text-end"
                  >
                    Subnav
                  </span>
                  <span
                    class="dropdown-item-indicator-end"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-angle-right"
                      role="presentation"
                    >
                      <use
                        xlink:href="##angle-right"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </ul>
          </div>
          <div
            aria-hidden="false"
            class="drilldown-item"
          >
            <ul
              class="inline-scroller"
              role="menu"
            >
              <li
                role="none"
              >
                <a
                  class="dropdown-item"
                  data-testid="menu-item-2nd hash link"
                  href="#"
                  role="menuitem"
                >
                  <span
                    class="dropdown-item-indicator-text-end"
                  >
                    2nd hash link
                  </span>
                </a>
              </li>
              <li
                role="none"
              >
                <button
                  class="dropdown-item btn btn-unstyled"
                  data-testid="menu-item-Subnav"
                  role="menuitem"
                  type="button"
                >
                  <span
                    class="dropdown-item-indicator-text-end"
                  >
                    Subnav
                  </span>
                  <span
                    class="dropdown-item-indicator-end"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-angle-right"
                      role="presentation"
                    >
                      <use
                        xlink:href="##angle-right"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </ul>
          </div>
          <div
            aria-hidden="false"
            class="drilldown-item"
          >
            <ul
              class="inline-scroller"
              role="menu"
            >
              <li
                role="none"
              >
                <button
                  class="dropdown-item btn btn-unstyled"
                  data-testid="menu-item-The"
                  role="menuitem"
                  type="button"
                >
                  <span
                    class="dropdown-item-indicator-text-end"
                  >
                    The
                  </span>
                </button>
              </li>
              <li
                role="none"
              >
                <button
                  class="dropdown-item btn btn-unstyled"
                  data-testid="menu-item-End"
                  role="menuitem"
                  type="button"
                >
                  <span
                    class="dropdown-item-indicator-text-end"
                  >
                    End
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayDropDownWithDrilldown renders dividers 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-2"
        aria-expanded="true"
        aria-haspopup="menu"
        class="dropdown-toggle"
        data-testid="trigger"
        style=""
      />
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu drilldown dropdown-menu-indicator-end show"
        id="clay-dropdown-menu-2"
        role="presentation"
        style="left: -999px; top: -995px;"
      >
        <div
          class="drilldown-inner"
        >
          <div
            aria-hidden="true"
            class="drilldown-item drilldown-current"
          >
            <ul
              class="inline-scroller"
              role="menu"
            >
              <li
                role="none"
              >
                <a
                  class="dropdown-item"
                  data-testid="menu-item-Hash Link"
                  href="#"
                  role="menuitem"
                >
                  <span
                    class="dropdown-item-indicator-text-end"
                  >
                    Hash Link
                  </span>
                </a>
              </li>
              <li
                aria-hidden="true"
                class="dropdown-divider"
                role="presentation"
              />
              <li
                role="none"
              >
                <button
                  class="dropdown-item btn btn-unstyled"
                  data-testid="menu-item-Alert!"
                  role="menuitem"
                  type="button"
                >
                  <span
                    class="dropdown-item-indicator-text-end"
                  >
                    Alert!
                  </span>
                </button>
              </li>
              <li
                aria-hidden="true"
                class="dropdown-divider"
                role="presentation"
              />
              <li
                role="none"
              >
                <button
                  class="dropdown-item btn btn-unstyled"
                  data-testid="menu-item-Subnav"
                  role="menuitem"
                  type="button"
                >
                  <span
                    class="dropdown-item-indicator-text-end"
                  >
                    Subnav
                  </span>
                  <span
                    class="dropdown-item-indicator-end"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-angle-right"
                      role="presentation"
                    >
                      <use
                        xlink:href="##angle-right"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </ul>
          </div>
          <div
            aria-hidden="false"
            class="drilldown-item"
          >
            <ul
              class="inline-scroller"
              role="menu"
            >
              <li
                role="none"
              >
                <a
                  class="dropdown-item"
                  data-testid="menu-item-2nd hash link"
                  href="#"
                  role="menuitem"
                >
                  <span
                    class="dropdown-item-indicator-text-end"
                  >
                    2nd hash link
                  </span>
                </a>
              </li>
              <li
                aria-hidden="true"
                class="dropdown-divider"
                role="presentation"
              />
              <li
                role="none"
              >
                <button
                  class="dropdown-item btn btn-unstyled"
                  data-testid="menu-item-Subnav"
                  role="menuitem"
                  type="button"
                >
                  <span
                    class="dropdown-item-indicator-text-end"
                  >
                    Subnav
                  </span>
                  <span
                    class="dropdown-item-indicator-end"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-angle-right"
                      role="presentation"
                    >
                      <use
                        xlink:href="##angle-right"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </ul>
          </div>
          <div
            aria-hidden="false"
            class="drilldown-item"
          >
            <ul
              class="inline-scroller"
              role="menu"
            >
              <li
                role="none"
              >
                <button
                  class="dropdown-item btn btn-unstyled"
                  data-testid="menu-item-The"
                  role="menuitem"
                  type="button"
                >
                  <span
                    class="dropdown-item-indicator-text-end"
                  >
                    The
                  </span>
                </button>
              </li>
              <li
                aria-hidden="true"
                class="dropdown-divider"
                role="presentation"
              />
              <li
                role="none"
              >
                <button
                  class="dropdown-item btn btn-unstyled"
                  data-testid="menu-item-End"
                  role="menuitem"
                  type="button"
                >
                  <span
                    class="dropdown-item-indicator-text-end"
                  >
                    End
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayDropDownWithDrilldown renders with the menu initially active 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-5"
        aria-expanded="true"
        aria-haspopup="menu"
        class="dropdown-toggle"
        data-testid="trigger"
      />
    </div>
  </div>
</body>
`;

exports[`ClayDropDownWithDrilldown the menu can be toggled by clicking in an item 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-6"
        aria-expanded="false"
        aria-haspopup="menu"
        class="dropdown-toggle"
        data-testid="trigger"
        style=""
      />
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu drilldown dropdown-menu-indicator-end"
        id="clay-dropdown-menu-6"
        role="presentation"
        style="left: -999px; top: -995px;"
      >
        <div
          class="drilldown-inner"
        >
          <div
            aria-hidden="true"
            class="drilldown-item drilldown-current"
          >
            <ul
              class="inline-scroller"
              role="menu"
            >
              <li
                role="none"
              >
                <button
                  class="dropdown-item btn btn-unstyled"
                  data-testid="menu-item-Toggle"
                  role="menuitem"
                  type="button"
                >
                  <span
                    class="dropdown-item-indicator-text-end"
                  >
                    Toggle
                  </span>
                </button>
              </li>
              <li
                role="none"
              >
                <button
                  class="dropdown-item btn btn-unstyled"
                  data-testid="menu-item-Subnav"
                  role="menuitem"
                  type="button"
                >
                  <span
                    class="dropdown-item-indicator-text-end"
                  >
                    Subnav
                  </span>
                  <span
                    class="dropdown-item-indicator-end"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-angle-right"
                      role="presentation"
                    >
                      <use
                        xlink:href="##angle-right"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </ul>
          </div>
          <div
            aria-hidden="false"
            class="drilldown-item"
          >
            <ul
              class="inline-scroller"
              role="menu"
            >
              <li
                role="none"
              >
                <a
                  class="dropdown-item"
                  data-testid="menu-item-2nd hash link"
                  href="#"
                  role="menuitem"
                >
                  <span
                    class="dropdown-item-indicator-text-end"
                  >
                    2nd hash link
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
